--- a/note/style.css
+++ b/note/style.css
@@ -10,7 +10,6 @@ code, .example, .src {
 @media screen and (min-width: 800px) {
     /* floating TOC */
     #table-of-contents  {
-        background-color: white;
         position: fixed;
         top: 5%;
         right: 2%;
@@ -19,6 +18,7 @@ code, .example, .src {
     body {
         margin-left: auto;
         margin-right: auto;
-        width: 60%;
+        /* this way floating TOC wouldn't touch content */
+        width: 58%;
     }
 }
